# turtlebot3-manipulation-object-detection

./: README.md
turtlebot3_manipulation_bringup/worlds/: empty_world.model
turtlebot3_manipulation_description/ros2_control/: turtlebot3_manipulation_system.ros2_control.xacro
turtlebot3_manipulation_description/urdf/: open_manipulator_x.urdf.xacro
turtlebot3_manipulation_moveit_config/: CMakeLists.txt  package.xml
turtlebot3_manipulation_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_servo.yaml  pilz_cartesian_limits.yaml
turtlebot3_manipulation_moveit_config/launch/: move_group.launch.py  moveit_gazebo.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  spawn_controllers.launch.py
turtlebot3_manipulation_moveit_config/scripts/: ob2.py
turtlebot3_manipulation_moveit_config/src/: j_pub.cpp  motion.cpp
turtlebot3_manipulation_navigation2/launch/: navigation2.launch.py  navigation2_use_sim_time.launch.py
turtlebot3_manipulation_navigation2/param/: turtlebot3.yaml  turtlebot3_use_sim_time.yaml
turtlebot3_manipulation_teleop/: CMakeLists.txt
turtlebot3_manipulation_teleop/include/turtlebot3_manipulation_teleop/: turtlebot3_manipulation_teleop.hpp
turtlebot3_manipulation_teleop/script/: echo_vel.py
turtlebot3_manipulation_teleop/scripts/: echo_vel.py
